Mon Aug 25 00:52:31 2008  Tanaka Akira  <akr@fsij.org>

	* configure.in (BUILTIN_TRANSSRCS): defined.
	  (BUILTIN_TRANSOBJS): defined.

	* enc/Makefile.in (BUILTIN_TRANSES): defined.

	* enc/make_encmake.rb (BUILTIN_TRANSES): defined.

	* enc/depend: don't generate rules for builtin transcoders.

	* common.mk (COMMONOBJS): add BUILTIN_TRANSOBJS.
	  (enc.mk): pass BUILTIN_TRANSOBJS.
	  (newline.c): new rule.
	  (newline.$(OBJEXT)): new ru.e
	  (srcs): newline.c added.

	* Makefile.in (BUILTIN_TRANSSRCS): defined.
	  (BUILTIN_TRANSOBJS): defined.

	* transcode.c (Init_transcode): call Init_newline.

Mon Aug 25 00:11:02 2008  Tanaka Akira  <akr@fsij.org>

	* transcode.c (declare_transcoder): arguments order changed.
	  (rb_declare_transcoder): call declare_transcoder just once.

Sun Aug 24 19:48:46 2008  Tanaka Akira  <akr@fsij.org>

	* include/ruby/encoding.h (rb_econv_t): use rb_econv_option_t.

	* transcode.c: follow the rb_econv_t change.

Sun Aug 24 19:40:13 2008  Tanaka Akira  <akr@fsij.org>

	* io.c (rb_io_init_copy): copy encs.

Sun Aug 24 19:17:31 2008  Tanaka Akira  <akr@fsij.org>

	* io.c (rb_io_open): add an argument: vperm.
	  (open_key_args): call rb_io_open with perm.

Sun Aug 24 19:11:07 2008  Tanaka Akira  <akr@fsij.org>

	* io.c (sym_invalid): removed.
	  (sym_undef): removed.
	  (sym_ignore): removed.
	  (sym_replace): removed.

Sun Aug 24 19:07:17 2008  Tanaka Akira  <akr@fsij.org>

	* io.c (rb_io_reopen): initialize fptr->encs.opts.

Sun Aug 24 18:37:42 2008  Tanaka Akira  <akr@fsij.org>

	* io.c (rb_io_s_pipe): accept optional hash.
	  (rb_io_set_encoding): ditto.
	  (rb_io_extract_modeenc): use rb_econv_opts to initialize
	  ecopts.
	  (rb_file_open_generic): ditto.
	  (rb_file_open_internal): ditto.
	  (io_encoding_set): new argument: opt.
	  (argf_set_encoding): copy fptr->encs.opts to argf_ecopts.

	* transcode.c (rb_econv_opts): accept Qnil for initialization.

Sun Aug 24 18:10:08 2008  Tanaka Akira  <akr@fsij.org>
